<resources>
    <string name="app_name">Buddy Box</string>
    <string name="play">Play</string>
    <string name="shuffle_play">Shuffle Play</string>
    <string name="no_song_playing">No song playing</string>
    <string name="music_library">Music Library</string>
    <string name="loved">Loved</string>
    <string name="buddies">Buddies</string>
    <string name="play_pause_button">Play/Pause Button</string>
    <string name="library">Library</string>
    <string name="sampler">Buddy Box</string>
    <string name="sharing">Sharing</string>
    <string name="flame">Flame</string>
    <string name="song_playing">Song Playing</string>
    <string name="song">Song</string>
    <string name="genre">Genre</string>
    <string name="subtitle">Subtitle</string>
    <string name="maximize_playing_song">Maximize playing song</string>
    <string name="SongNameCantBeEmpty">Song name cannot be empty</string>
    <string name="Synchronizing">Synchronizing</string>
    <string name="ScanDevice">Scan This Device</string>
    <string name="pause">pause</string>
    <string name="skip_previous">skip previous</string>
    <string name="skip_next">skip next</string>
    <string name="artist_bar_title">Artist</string>
    <string name="close_activity">Close Activity</string>
    <string name="album_name">Album Name</string>
    <string name="album_art">Album Art</string>
    <string name="album_shuffle">Play All Album Song</string>
    <string name="album_play">Play All Album Songs</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="song_name">Song Name</string>
    <string name="song_duration">3:01</string>
    <string name="artist_picture">Artist Picture</string>
    <string name="artist_name">Artist Name</string>
    <string name="songs_count">42 songs</string>
    <string name="chip_text">chip text</string>
    <string name="song_playlist_chip">Song playlist chip</string>
    <string name="song_album_art">song album art</string>
    <string name="drag_song">Drag song to another position</string>
    <string name="song_artist">song artist</string>
    <string name="artist">Artist</string>
    <string name="artist_songs">42 songs</string>
    <string name="playable_art">Playable art</string>
    <string name="playable_name">Playable name</string>
    <string name="playable_subtitle">Playable subtitle</string>
    <string name="page_art">Page art</string>
    <string name="song_options">Song options</string>
    <string name="minimize_playing_screen">Minimize playing screen</string>
    <string name="song_progress">0:05</string>
    <string name="song_duration_progress">4:06</string>
    <string name="repeat">Repeat</string>
    <string name="shuffle">Shuffle</string>
    <string name="add_to_playlist">Add to Playlist</string>
    <string name="song_subtitle">Song subtitle</string>
    <string name="remove_song">Remove Song</string>
    <string name="blue">Blue</string>
    <string name="clear_search_field">clear search field</string>
    <string name="playingNow">Playing</string>
    <string name="search">Search</string>
    <string name="settings">Settings</string>
    <string name="sharing_warning">IMPORTANT: This player shares the MP3 files in your music folder: /android/.../music Make sure all MP3 files there can be shared.</string>
    <string name="free_storage">Free storage:</string>
    <string name="media_storage">Media storage:</string>
    <string name="sample_free_storage">2.3 GB</string>
    <string name="sample_media_storage">420 MB</string>
    <string name="volume">Volume</string>
</resources>
