<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/songItem"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/addToPlaylist"
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:background="?selectableItemBackground"
        android:contentDescription="@string/add_to_playlist"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:src="@drawable/ic_playlist_add" />

    <RelativeLayout
        android:id="@+id/songInfoContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_toStartOf="@+id/addToPlaylist"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?attr/selectableItemBackground">

        <TextView
            android:id="@+id/songName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:singleLine="true"
            android:text="@string/song_name"
            android:textAppearance="?attr/textAppearanceListItem" />

        <TextView
            android:id="@+id/songDuration"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/songName"
            android:layout_below="@+id/songName"
            android:layout_marginBottom="8dp"
            android:singleLine="true"
            android:text="@string/song_duration" />

    </RelativeLayout>

</RelativeLayout>
