<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="60dp"
    android:id="@+id/topBar"
    android:layout_alignParentTop="true"
    android:layout_centerHorizontal="true"
    android:layout_marginBottom="10dp"
    android:orientation="horizontal"
    tools:showIn="@layout/activity_main">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:paddingTop="8dp"
        android:clickable="true"
        android:background="?selectableItemBackground"
        android:id="@+id/sharingNavBar">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/sharingNavbarBtn"
            android:src="@drawable/ic_sharing"
            android:contentDescription="@string/buddies"
            android:clickable="false"
            android:background="@android:color/transparent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/sharing"
            android:id="@+id/sharingText"
            android:textAlignment="center" />
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:paddingTop="8dp"
        android:clickable="true"
        android:background="?selectableItemBackground"
        android:id="@+id/samplerNavBar">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/samplerNavbarBtn"
            android:src="@drawable/ic_whatshot"
            android:background="@android:color/transparent"
            android:clickable="false"
            android:adjustViewBounds="false" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/sampler"
            android:id="@+id/samplerText"
            android:textAlignment="center" />
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:paddingTop="8dp"
        android:clickable="true"
        android:background="?selectableItemBackground"
        android:id="@+id/lovedNavBar">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/lovedNavbarBtn"
            android:src="@drawable/ic_loved"
            android:contentDescription="@string/loved"
            android:clickable="false"
            android:background="@android:color/transparent" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/loved"
            android:id="@+id/lovedText"
            android:textAlignment="center" />
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:paddingTop="8dp"
        android:clickable="true"
        android:background="?selectableItemBackground"
        android:id="@+id/libraryNavBar">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/libraryNavbarBtn"
            android:src="@drawable/ic_library_music"
            android:contentDescription="@string/music_library"
            android:background="@android:color/transparent"
            android:clickable="false" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/library"
            android:id="@+id/libraryText"
            android:textAlignment="center" />
    </LinearLayout>

</LinearLayout>