<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/windowBackground">

    <RelativeLayout
        android:id="@+id/artistBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/back"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:background="@android:color/transparent"
            android:contentDescription="@string/close_activity"
            android:padding="16dp"
            android:src="@drawable/ic_arrow_back" />

        <TextView
            android:id="@+id/artistName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="12dp"
            android:layout_marginStart="16dp"
            android:layout_toEndOf="@+id/back"
            android:text="@string/artist_name"
            android:textAlignment="gravity"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="20sp" />

    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/artistBar">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <ImageView
                android:id="@+id/artistPicture"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:contentDescription="@string/artist_picture"
                app:srcCompat="@mipmap/sneer2" />

            <RelativeLayout
                android:id="@+id/artistDetails"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/artistPicture"
                android:orientation="vertical"
                android:paddingLeft="12dp"
                android:paddingRight="12dp"
                android:paddingTop="12dp">

            </RelativeLayout>

            <Button
                android:id="@+id/shufflePlay"
                android:layout_width="150dp"
                android:layout_height="40dp"
                android:layout_below="@+id/artistDetails"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="12dp"
                android:layout_marginTop="26dp"
                android:background="@drawable/rounded_background"
                android:backgroundTint="#01579b"
                android:foreground="?attr/selectableItemBackground"
                android:text="@string/shuffle_play" />

            <TextView
                android:id="@+id/artistSongsCount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/shufflePlay"
                android:layout_centerHorizontal="true"
                android:text="@string/songs_count"
                android:textAlignment="center" />

            <include
                android:id="@+id/artistBio"
                layout="@layout/artist_bio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/artistSongsCount"
                android:layout_marginEnd="12dp"
                android:layout_marginStart="12dp"
                android:layout_marginTop="20dp" />

            <LinearLayout
                android:id="@+id/albums_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/artistBio"
                android:layout_marginTop="20dp"
                android:orientation="vertical"
                android:padding="12dp" />

        </RelativeLayout>

    </ScrollView>

</RelativeLayout>