<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1"
    android:background="#000000">

    <RelativeLayout
        android:id="@+id/topBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true">

        <ImageButton
            android:id="@+id/songMore"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            android:background="@android:color/transparent"
            app:srcCompat="@drawable/ic_more_vert" />

        <ImageView
            android:id="@+id/minimize"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:background="@android:color/transparent"
            android:contentDescription="TODO"
            android:padding="10dp"
            android:src="@drawable/ic_expand_more" />

        <TextView
            android:id="@+id/playingTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/song_playing"
            android:textAlignment="gravity"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="20sp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center_horizontal"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">

        <RelativeLayout
            android:id="@+id/songContainer"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/seekBar"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="20dp">

            <ImageView
                android:id="@+id/art"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_above="@+id/playingSongName"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:adjustViewBounds="false"
                android:cropToPadding="false"
                app:srcCompat="@mipmap/sneer2" />

            <TextView
                android:id="@+id/playingSongName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_above="@+id/playingSongArtist"
                android:layout_alignParentStart="true"
                android:layout_marginTop="10dp"
                android:text="@string/song"
                android:textAlignment="center"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/playingSongArtist"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentStart="true"
                android:text="@string/artist"
                android:textAlignment="center"
                android:textAppearance="?android:attr/textAppearanceMedium" />


        </RelativeLayout>

        <SeekBar
            android:id="@+id/seekBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="20dp" />

        <TextView
            android:id="@+id/songProgress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:layout_marginLeft="16dp"
            android:text="0:05"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/songDuration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_marginRight="16dp"
            android:text="4:06"
            android:textSize="12sp" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp">

        <ImageButton
            android:id="@+id/repeat"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_centerVertical="true"
            android:layout_marginEnd="16dp"
            android:layout_toStartOf="@+id/skipPrevious"
            android:background="@android:color/transparent"
            android:contentDescription="TODO"
            android:padding="10dp"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_repeat_one" />

        <ImageButton
            android:id="@+id/skipPrevious"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_centerVertical="true"
            android:layout_toStartOf="@+id/playingPlayPause"
            android:background="@android:color/transparent"
            android:contentDescription="TODO"
            android:padding="4dp"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_skip_previous" />

        <ImageButton
            android:id="@+id/playingPlayPause"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@android:color/transparent"
            android:contentDescription="TODO"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_play_circle" />

        <ImageButton
            android:id="@+id/skipNext"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@+id/playingPlayPause"
            android:background="@android:color/transparent"
            android:contentDescription="TODO"
            android:padding="4dp"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_skip_next" />

        <ImageButton
            android:id="@+id/shuffle"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignTop="@+id/skipNext"
            android:layout_marginStart="16dp"
            android:layout_marginTop="10dp"
            android:layout_toEndOf="@+id/skipNext"
            android:background="@android:color/transparent"
            android:contentDescription="TODO"
            android:padding="10dp"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_shuffle" />

    </RelativeLayout>

</LinearLayout>